[tool.poetry]
name = "matfoik-f-randomness-testsuite"
version = "0.1.0"
description = ""
authors = [""]
license = "MIT"
readme = "README.md"
packages = [{include = "matfoik_f_randomness_testsuite"}]

[tool.poetry.dependencies]
python = "^3.11"
scipy = "^1.12.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
